syntax = "proto3";
import "google/protobuf/struct.proto";

service PaymentService {
    rpc get_json(CreateUserRequest) returns (google.protobuf.Struct);
    rpc batch_init_users(BatchInitPayRequest) returns (BatchInitPayResponse);
    rpc create_user(CreateUserRequest) returns (CreateUserResponse);
    rpc find_user(FindUserRequest) returns (FindUserResponse);
    rpc add_credit(FundsRequest) returns (FundsResponse);
    rpc remove_credit(FundsRequest) returns (FundsResponse);
}

message BatchInitPayRequest {
    int32 n = 1;
    int32 starting_money = 2;
}

message BatchInitPayResponse {
    string message = 1;
}

message CreateUserRequest {

}

message CreateUserResponse {
    string user_id = 1;
}

message FindUserRequest {
    string user_id = 1;
}

message FindUserResponse {
    string user_id = 1;
    int32 credit = 2;
}

message FundsRequest {
    string user_id = 1;
    int32 amount = 2;
}

message FundsResponse {
    string message = 1;
    int32 statuscode = 2;
}
